--- a/JogoDaVelha/index.html
+++ b/JogoDaVelha/index.html
@@ -5,25 +5,26 @@
     <title>Jogo da Velha</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"/>
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"/>  <!-- liks para funcionar o css-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.0.2/tailwind.min.css"/>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <body class="w-screen h-screen ctr">
-      <div class="tabel ctr">
+    <div class="w-screen h-screen ctr">  <!-- altura e largura da tela-->
+      <div class="tabel ctr">  <!-- lika com css para modificações-->
         <div class="board">
-          <span id="col-0"></span><span id="col-1"></span
+            <!-- cria colunas para estrutura do jogo-->
+          <span id="col-0"></span><span id="col-1"></span 
           ><span id="col-2"></span><span id="col-3"></span
           ><span id="col-4"></span><span id="col-5"></span
           ><span id="col-6"></span><span id="col-7"></span
           ><span id="col-8"></span>
         </div>
-        <button id="reset">Reset</button>
+        <button id="reset">Resetar</button>
       </div>
     </body>
     <script src="script.js"></script>
-  </body>
+</div>
 </html>            
